--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <body>
-     <marquee><b>Welcome to PureX<b><marquee>
-     <p>this is cd dw hq , a roleplay hq<p>
+     <marquee><b>Welcome to CdDw-HQ<b><marquee>
+     <p>this is cd-dw hq , a roleplay hq<p>
+       <h1>Cd-Dw HQ is a alliance and roleplay company that creates projects<h1>
   <body>
 <html>
