--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <body>
-     <marquee><b>Welcome to CdDw-HQ<b><marquee>
-     <p>this is cd-dw hq , a roleplay hq<p>
-       <h1>Cd-Dw HQ is a alliance and roleplay company that creates projects<h1>
+     <marquee><b><h1>Welcome to CdDw-HQ<b><h1><marquee>
+     <h2>this is cd-dw hq , a roleplay hq<h2>
+       <h2>Cd-Dw HQ is a alliance and roleplay company that creates projects<h2>
   <body>
 <html>
