--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<!DOCTYPE HTML>
 <html>
+  <head>
+    <style>
+      body, html {
+       background-color: lightblue;
+      }
+    </style>
+  </head>
   <body>
-     <marquee><b><h1>Welcome to CdDw-HQ<b><h1><marquee>
-     <h2>this is cd-dw hq , a roleplay hq<h2>
-       <h2>Cd-Dw HQ is a alliance and roleplay company that creates projects<h2>
+    <small>doctype html is boring</small>
+    <marquee><h1>CDOTech</h1></marquee>
   <body>
 <html>
